--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <p> hello everyone</p>
     <p>Rock paper scissors</p>
 
     <button onclick="playGame('rock')">
